--- a/GetRide/backend/package.json
+++ b/GetRide/backend/package.json
@@ -14,11 +14,13 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-jwt": "^8.5.1",
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.1",
     "node-input-validator": "^4.5.1",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9"
   }
 }
